{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "0c913ac3-21ba-4572-8c85-e3e4ac14b20e",
            "actions": [
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "34f49928-265d-4564-9539-6ee454098063",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Reset",
                    "type": "Button",
                    "id": "3dc9756e-a735-47e5-a2e9-10ab70c50b99",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "4a7fc97c-e8b7-40cd-8531-b03d045ddefe",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "bcf366e0-79c2-49d3-a25d-3b257b966c7c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SpectateUp",
                    "type": "Button",
                    "id": "c99c1fc5-2c06-47d9-9c33-1d3357a6d157",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SpectateDown",
                    "type": "Button",
                    "id": "20291d9c-fd30-49d2-a5cd-fffd75cd227d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b6c61c1d-181a-455d-9fe5-2b52555377e9",
                    "path": "<HID::DragonRise Inc.   Generic   USB  Joystick  >/stick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Joystick",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "KeyboardMovement",
                    "id": "2121d230-9129-463d-b31c-3c2fabd46199",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "9f84a62c-ac40-4d2c-a60c-e3f07f47b3d2",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "ad9e5687-bdd6-455e-b46e-f8482dd8c01c",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "80b55b92-3d4f-41b6-9e56-24654c2d86a2",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "95dde6ce-a758-4d80-adc1-e2198197caa2",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "7df75425-2378-4ed8-9d07-67488b4bf6e9",
                    "path": "<HID::DragonRise Inc.   Generic   USB  Joystick  >/button3",
                    "interactions": "",
                    "processors": "",
                    "groups": "Joystick",
                    "action": "Reset",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0815d3c2-aa15-466a-aada-b6f6f83e01f5",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Reset",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "40db9e73-ef74-4c23-b30b-67e08b9c1134",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2335c498-0d83-4260-9af6-5f5677121ad3",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "Joystick",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f1e1e38a-32d5-477b-a1da-be00b1769bc7",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8cc53ada-40bc-43f8-b553-dd1a90f8cbe8",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "Joystick",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e09274e7-9838-47e0-9319-f7cd0f10a618",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "SpectateDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c88c5693-4ab9-4cae-9e6b-98c80d42cf34",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "Joystick",
                    "action": "SpectateDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "40cb946f-e1d4-47ec-a780-dce696550c3b",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "SpectateUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1df63fed-64a0-46ef-9129-86d3679d09e5",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "Joystick",
                    "action": "SpectateUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Joystick",
            "bindingGroup": "Joystick",
            "devices": [
                {
                    "devicePath": "<HID::DragonRise Inc.   Generic   USB  Joystick  >",
                    "isOptional": true,
                    "isOR": false
                }
            ]
        }
    ]
}